--- a/stage 4/Data1.ipynb
+++ b/stage 4/Data1.ipynb
@@ -2,19 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "import unicodecsv"
+    "from datetime import datetime as dt\n",
+    "import unicodecsv\n",
+    "\n",
+    "enrollments = read_csv('enrollments.csv')\n",
+    "daily_engagement = read_csv('daily_engagement.csv')\n",
+    "project_submissions = read_csv('project_submissions.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -28,35 +32,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Takes a date as a string, and returns a Python datetime object\n",
+    "# If there is no date given, returns None\n",
+    "\n",
     "def parse_date(date):\n",
     "    if date == '':\n",
     "        return None\n",
     "    else:\n",
-    "        return datetime.strptime(date, '%Y-%m-%d')"
+    "        return dt.strptime(date, '%Y-%m-%d')\n",
+    "    \n",
+    "    \n",
+    "# Takes a string which is either an empty string or represents an integer,\n",
+    "# and returns an int or None.\n",
+    "\n",
+    "def parse_maybe_int(i):\n",
+    "    if i == '':\n",
+    "        return None\n",
+    "    else:\n",
+    "        return int(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'account_key': u'448',\n",
+       " u'cancel_date': datetime.datetime(2015, 1, 14, 0, 0),\n",
+       " u'days_to_cancel': 65,\n",
+       " u'is_canceled': True,\n",
+       " u'is_udacity': True,\n",
+       " u'join_date': datetime.datetime(2014, 11, 10, 0, 0),\n",
+       " u'status': u'canceled'}"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "enrollments = read_csv('enrollments.csv')\n",
-    "daily_engagement = read_csv('daily_engagement.csv')\n",
-    "project_submissions = read_csv('project_submissions.csv')"
+    "for enrollment in enrollments:\n",
+    "    enrollment['cancel_date'] = parse_date(enrollment['cancel_date'])\n",
+    "    enrollment['days_to_cancel'] = parse_maybe_int(enrollment['days_to_cancel'])\n",
+    "    enrollment['is_canceled'] = enrollment['is_canceled'] == 'TRUE'\n",
+    "    enrollment['is_udacity'] = enrollment['is_udacity'] == 'TRUE'\n",
+    "    enrollment['join_date'] = parse_date(enrollment['join_date'])\n",
+    "    \n",
+    "enrollments[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +134,7 @@
        "1640"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +156,7 @@
        "1302"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -141,7 +180,7 @@
        "136240"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +202,7 @@
        "1237"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +225,7 @@
        "3642"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +247,7 @@
        "743"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +270,7 @@
        "u'0'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +292,7 @@
        "65"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +308,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for enrollment in enrollments:\n",
+    "    if enrollment['days_to_cancel'] != 0 and enrollment['account_key'] not in unique_engagement_students:\n",
+    "        count += 1\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -278,35 +344,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65\n",
-      "5\n",
-      "0\n",
-      "0\n"
+      "448\n",
+      "448\n",
+      "448\n",
+      "448\n",
+      "448\n",
+      "448\n",
+      "448\n",
+      "448\n",
+      "448\n",
+      "1304\n",
+      "1304\n",
+      "312\n",
+      "312\n",
+      "312\n",
+      "312\n",
+      "818\n",
+      "1069\n",
+      "1101\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'NoneType' and 'datetime.datetime'",
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "udacity_test_accounts = set()\n",
+    "for enrollment in enrollments:\n",
+    "    if enrollment['is_udacity']:\n",
+    "        print enrollment['account_key']\n",
+    "        udacity_test_accounts.add(enrollment['account_key'])\n",
+    "len(udacity_test_accounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def remove_udacity_accounts(data):\n",
+    "    non_udacity_data = []\n",
+    "    for data_point in data:\n",
+    "        if data_point['account_key'] not in udacity_test_accounts:\n",
+    "            non_udacity_data.append(data_point)\n",
+    "    return non_udacity_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'account_key'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-74-7ca3bf35d3b7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mdate1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparse_date\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0menrollment\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'join_date'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mdate2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparse_date\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0menrollment\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'cancel_date'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mdelta\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdate2\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mdate1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mdelta\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdays\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#    if delta >= 1 and student not in unique_engagement_students:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'NoneType' and 'datetime.datetime'"
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-88-e955a9d9efb6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mnon_udacity_enrollments\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mremove_udacity_accounts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0menrollments\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mnon_udacity_engagements\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mremove_udacity_accounts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdaily_engagement\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mnon_udacity_submissions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mremove_udacity_accounts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproject_submissions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnon_udacity_enrollments\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-87-11cb87cab38d>\u001b[0m in \u001b[0;36mremove_udacity_accounts\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mnon_udacity_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mdata_point\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mdata_point\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'account_key'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mudacity_test_accounts\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m             \u001b[0mnon_udacity_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_point\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnon_udacity_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'account_key'"
      ]
     }
    ],
    "source": [
-    "count = 0\n",
-    "for enrollment in enrollments:\n",
-    "    student = enrollment['account_key']\n",
-    "    date1 = parse_date(enrollment['join_date'])\n",
-    "    date2 = parse_date(enrollment['cancel_date'])\n",
-    "    delta = (date2 - date1)\n",
-    "    print delta.days\n",
-    "#    if delta >= 1 and student not in unique_engagement_students:\n",
-    "#        count += 1\n",
-    "    "
+    "non_udacity_enrollments = remove_udacity_accounts(enrollments)\n",
+    "non_udacity_engagements = remove_udacity_accounts(daily_engagement)\n",
+    "non_udacity_submissions = remove_udacity_accounts(project_submissions)\n",
+    "\n",
+    "print len(non_udacity_enrollments)\n",
+    "print len(non_udacity_engagements)\n",
+    "print len(non_udacity_submissions)"
    ]
   },
   {
